--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_STORAGEBUCKET= "webgamesite-bed8c.appspot.com"
 REACT_APP_MESSAGINGSENDERID= "204127946935"
 REACT_APP_APPID= "1:204127946935:web:25c183ef1412a9e5a16532"
 REACT_APP_MEASUREMENTID= "G-CGH249SJE9"
+REACT_APP_DATABASEURL="https://webgamesite-bed8c-default-rtdb.asia-southeast1.firebasedatabase.app"
