--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ REACT_APP_MESSAGINGSENDERID= "204127946935"
 REACT_APP_APPID= "1:204127946935:web:25c183ef1412a9e5a16532"
 REACT_APP_MEASUREMENTID= "G-CGH249SJE9"
 REACT_APP_DATABASEURL="https://webgamesite-bed8c-default-rtdb.asia-southeast1.firebasedatabase.app"
+REACT_APP_FIREBASE_SCOREGROUP="Score/Group"
+REACT_APP_FIREBASE_VOTECOUNT="VoteCount/Group"
+REACT_APP_FIREBASE_CHECKVOTE="IsVote/"
+REACT_APP_FIREBASE_VOTECHECK="VoteCount/"
+REACT_APP_FIREBASE_SCORE="Score/"
